--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.3",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.10.0",
     "next": "14.2.17",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
