--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/nodemailer": "^6.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
@@ -23,6 +24,7 @@
     "mongoose": "^8.8.0",
     "next": "14.2.17",
     "next-auth": "^4.24.10",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.0.1-alpha.0",
