--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/nodemailer": "^6.4.16",
     "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.10.0",
@@ -26,6 +29,7 @@
     "next": "14.2.17",
     "next-auth": "^4.24.10",
     "nodemailer": "^6.9.16",
+    "preline": "^2.5.1",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.0.1-alpha.0",
